test/vm/fails/invalid_rcall.js
rcall("test", "func", 1, false, []);